<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/b1"
        tools:context="com.example.knbhatt.scorekeeperapp.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="@dimen/margin_bottom"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_bottom"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/team1"
                    android:textStyle="bold"
                    android:textSize="@dimen/team_size"
                    android:textColor="@color/textcolor"
                    />
                <TextView
                    android:id="@+id/a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/zero"
                    android:textSize="@dimen/team_size"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin">
                    <Button
                        android:layout_width="@dimen/margin_bottom"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:onClick="score3a"
                        android:text="@string/p3"
                        android:textSize="@dimen/text_size"/>
                    <Button
                        android:layout_width="@dimen/margin_bottom"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:onClick="score2a"
                        android:textSize="@dimen/text_size"
                        android:text="@string/p2" />
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="freethrowa"
                    android:text="@string/ft"
                    android:layout_margin="@dimen/margin"
                    android:textSize="@dimen/text_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/margin_bottom"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textcolor"
                    android:gravity="center_horizontal"
                    android:text="@string/team2"
                    android:textSize="@dimen/team_size"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/b_score"
                    android:textColor="@color/textcolor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/zero"
                    android:textSize="@dimen/team_size"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin">
                    <Button
                        android:layout_width="@dimen/margin_bottom"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:onClick="score3b"
                        android:textSize="@dimen/text_size"
                        android:text="@string/p3" />
                    <Button
                        android:layout_width="@dimen/margin_bottom"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:onClick="score2b"
                        android:text="@string/p2" />
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="freethrowb"
                    android:textSize="@dimen/text_size"
                    android:text="@string/ft"
                    android:layout_margin="@dimen/margin"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:text="@string/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="reset"
                android:id="@+id/b" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding_top"
            android:orientation="vertical">
            <Chronometer
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_top"
                android:id="@+id/chronometer"
                android:textSize="@dimen/text_size1"
                android:textColor="@color/textcolor"
                android:gravity="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height1"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    android:text="@string/b1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_marginLeft="@dimen/padding_top"
                    android:onClick="startChronometer" />
                <Button
                    android:text="@string/b2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="pauseChronometer"
                    />
                <Button
                    android:text="@string/b3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="resetChronometer" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>